infra/k8s/workspace-minio/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workspace-minio
spec:
  selector:
    app: workspace-minio
  ports:
    - name: s3
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001
